# shiback2

./: pyproject.toml
shi/: db.sqlite3  manage.py
shi/company/: admin.py  models.py  serializers.py  urls.py  views.py
shi/company/migrations/: 0001_initial.py
shi/constant/: apps.py  urls.py  views.py
shi/media/: admin.py  models.py  serializers.py  translation.py  urls.py  views.py
shi/media/migrations/: 0001_initial.py  0002_remove_media_name_af_remove_media_name_ar_and_more.py
shi/partner/: admin.py  models.py  serializers.py  translation.py  urls.py  views.py
shi/partner/migrations/: 0001_initial.py
shi/project/: admin.py  models.py  serializers.py  translation.py  urls.py  views.py
shi/project/migrations/: 0001_initial.py
shi/service/: admin.py  models.py  serializers.py  translation.py  urls.py  views.py
shi/service/migrations/: 0001_initial.py  0002_alter_service_tags.py  0003_progress.py
shi/shi/: asgi.py  settings.py  urls.py  wsgi.py
shi/social/: admin.py  models.py  serializers.py  translation.py  urls.py  views.py
shi/social/migrations/: 0001_initial.py  0002_socialmedia_url.py
shi/team/: admin.py  models.py  serializers.py  translation.py  urls.py  views.py
shi/team/migrations/: 0001_initial.py  0002_remove_teammember_social_media_and_more.py  0003_remove_teammember_social_media_teamsocial.py  0004_gallery.py
